# prodot

./: .gitignore  README.md  pyproject.toml  requirements.txt
prodot/: __init__.py  _base_object.py  _dot_object.py  _path_object.py  _pro_object.py  dict_class.py  dict_object.py  dot_object.py  path_object.py  pro_object.py
prodot/json_tools/: __init__.py  _filter.py  _get_all_paths.py  deletar.py
prodot/json_tools/_filter/: __init__.py  __main__.py  _filter_byPath.py  _filter_byValue.py  _filtered_object.py
tests/: conftest.py  test_base_object.py  test_dot_object.py  test_path_object.py  test_pro_object.py
tests/json_tools/: test_filter.py
tests/json_tools/filter.py/: test_filter_by_path.py  test_filter_by_value.py
